# attack_simulator

./: CMakeLists.txt  README.md  package.xml
include/cpi_simulator/: custom_point_types.hpp
include/hfr_simulator/: hfr_simulator.hpp
launch/: cpi_simulator_launch.py  hfr_simulator_launch.py
src/: cpi_simulator.cpp  hfr_simulator.cpp
src/utils/: velocity_indicator.cpp
test/: test_hfr_simulator.cpp
